--- a/style.css
+++ b/style.css
@@ -5,7 +5,9 @@ body {
   background-image: url('https://png.pngtree.com/background/20230611/original/pngtree-many-different-kinds-of-food-are-arranged-on-a-table-picture-image_3145533.jpg');
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: center top;
+  background-position: center;
+  background-attachment: fixed;
+  min-height: 100vh;
 }
 
 header {
@@ -17,11 +19,15 @@ header {
 
 main {
   padding: 2em;
+  margin: 2em;
+  border-radius: 10px;
+  background-color: transparent; /* No white box */
 }
 
 form {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
   margin-bottom: 2em;
 }
 
@@ -84,4 +90,26 @@ ul li {
   margin: 5px 0;
   padding: 5px;
   border-radius: 3px;
+}
+
+@media (max-width: 600px) {
+  form {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  #search,
+  button {
+    width: 90%;
+    margin: 5px 0;
+  }
+
+  #results div {
+    width: 90%;
+  }
+
+  main {
+    padding: 1em;
+    margin: 1em;
+  }
 }
